# notatka

./: LICENSE  README.md  docker-compose.yaml  pyproject.toml
account/: Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml
account/src/: main.py
account/src/api/: accounts.py  auth.py
account/src/core/: .env.example  config.py
account/src/core/redis/: redis_helper.py
account/src/errors/: api_errors.py
account/src/migrations/versions/: 2024_09_22_1850-e010e67f1ab6_add_roles_table.py  2024_09_22_1918-e2199f9d2cff_add_user_roles_table.py  2024_09_29_1745-803699125fa8_update_field_name_token_refresh_token_.py  2024_09_29_1820-a83b9f454102_add_is_deactivated_field_in_session_.py  2024_09_29_2109-b0396069b9c6_add_session_uuid_in_session_table.py  2024_10_10_1706-1693babb1ede_create_user_emails_table.py  2024_10_13_1339-8cd7c9fdcf7a_add_is_confirmed_field_to_user_emails_.py
account/src/models/: __init__.py  base.py  user.py  user_emails.py
account/src/repositories/: email.py  session.py
account/src/schemas/: account.py  auth.py
account/src/services/: auth.py  email.py  notifications.py  session.py  user.py
account/src/utils/: auth.py  repository.py
auth/: .gitignore  pyproject.toml
auth/src/: main.py
notes/: pyproject.toml
notes/src/: alembic.ini  main.py
notes/src/api/: note.py  notes.py  routers.py
notes/src/core/: .env.example  config.py
notes/src/core/db/: db_helper.py
notes/src/dependencies/: auth.py  note.py
notes/src/errors/: api_errors.py
notes/src/migrations/versions/: 2024_10_23_1229-ae7851a54510_create_notes_table.py
notes/src/models/: __init__.py  base.py  note.py
notes/src/repositories/: note.py  repository.py
notes/src/schemas/: note.py  user.py
notes/src/services/: note.py
notifications/: Dockerfile  docker-compose.yaml  go.mod  pyproject.toml
notifications/src/: enums.py  main.py  type.py
notifications/src/core/: .env  .env.example  config.py
notifications/src/services/: EmailSender.go  EmailService.py  abstract_observer.py  consumer.py  email.py
notifications/src/templates/: confirmation_email.html  password_recovery.html
notifications/src/utils/: logging_config.py
src/: main.py
src/api/: accounts.py  auth.py  routers.py
src/core/: config.py
src/dependencies/: auth.py
src/errors/: api_errors.py
src/models/: __init__.py  role.py  roles.py  session.py  user.py  user_roles.py
src/repositories/: role.py
src/schemas/: account.py  auth.py  user.py
src/services/: auth.py  session.py  user.py
src/utils/: auth.py  (+1 more)
(+20 files in other folders)
