[tool.poetry]
name = "account-microservice"
version = "0.1.0"
description = ""
authors = ["ivan-karaberov <karaberov.ivan@yandex.ru>"]
readme = "README.md"
packages = [{include = "account_microservice"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standart"], version = "^0.30.6"}
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
