[tool.poetry]
name = "notes-microservice"
version = "0.1.0"
description = ""
authors = ["ivan-karaberov <karaberov.ivan@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.2"
uvicorn = {extras = ["standart"], version = "^0.32.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
