[tool.poetry]
name = "notes-microservice"
version = "0.1.0"
description = ""
authors = ["ivan-karaberov <karaberov.ivan@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = {extras = ["standart"], version = "^0.32.0"}
black = "^24.10.0"
alembic = {extras = ["async"], version = "^1.13.3"}
pydantic-settings = "^2.6.0"
asyncpg = "^0.30.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
